[package]
name = "tmod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
loading = "0.3.0"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "default-tls", "json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.12"
