[package]
name = "tmod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
colored = "2.1.0"
itertools = "0.13.0"
jars = "0.1.1"
loading = "0.3.0"
nom = "7.1.3"
ureq = { version = "2.9.7", default-features = false, features = ["tls", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
toml = "0.8.12"
url = "2.5.2"
clap = { version = "4.5.8", features = ["derive"] }
dialoguer = "0.11.0"
zip = "0.6.6"
ptree = "0.5.0"

[features]
offline = []
